Bug 275268 - Tooltip shows "dd MM yyyy" instead of actual value
Summary: Tooltip shows "dd MM yyyy" instead of actual value
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
: 277194 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-09 09:59 UTC by Elias Probst
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot with tooltip showing "dd MM yyyy" (5.55 KB, image/png)
2011-06-09 09:59 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2011-06-09 09:59:48 UTC
Created attachment 60813 [details]
Screenshot with tooltip showing "dd MM yyyy"

Version:           git-latest (using KDE 4.6.3) 
OS:                Linux

When hovering over the timestamp of a message in the Text UI window, the appearing tooltip shows only "dd MM yyyy" instead of the actual value.

See attached screenshot.

Reproducible: Always
Comment 1 Martin Klapetek 2011-07-07 10:23:30 UTC
*** Bug 277194 has been marked as a duplicate of this bug. ***
Comment 2 David Edmundson 2011-07-16 13:55:41 UTC
Git commit 0ef3c005da57371211a73fbf90d7effdcb5830c4 by David Edmundson.
Committed on 16/07/2011 at 15:54.
Pushed by davidedmundson into branch 'master'.

Fix date time replacement in text view, also vastly simplify code

BUG: 275268

M  +2    -17   lib/adium-theme-view.cpp

http://commits.kde.org/telepathy-chat-handler/0ef3c005da57371211a73fbf90d7effdcb5830c4