Fix date time replacement in text view, also vastly simplify code

BUG: 275268